--- a/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
+++ b/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum One: Unraveling the intricacies of Arbitrum Rollup'
-created: '2023-11-09T12:52:19.148Z'
+created: '2023-11-09T13:12:58.459Z'
 guideType: onboarding
 key: arbitrum-one-arbitrum-university-177
 name: Arbitrum One
@@ -173,14 +173,87 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 1aa5dfb6-6c34-43a5-b9ae-9f45f513b50e
-  - content: |
+  - content: >
       ## The Roll up security
+
+      Arbitrum Rollup's security model leverages the robustness of Ethereum's
+      Layer 1 to offer a Layer 2 scaling solution that doesn't compromise on
+      trustlessness or decentralization. By utilizing a unique combination of
+      on-chain data availability and off-chain computation, it ensures that even
+      if all but one validator acts maliciously, the integrity of transactions
+      is preserved. Moreover, the interactive dispute resolution process allows
+      any honest participant to challenge incorrect claims by staking, thereby
+      maintaining the overall security and reliability of the network. 
+
 
       ### Validators
 
+      Validators are essential participants in the Arbitrum Rollup protocol,
+      responsible for proposing and ensuring the accuracy of RBlocks in the
+      network. Some validators, known as stakers, back their commitments with an
+      ETH deposit, which they lose if found cheating. In most cases, only one
+      staker is active to validate the current state unless disputes arise.
+      While the role is intended to be open to all, Arbitrum One currently uses
+      an allowlist for validators. Any honest validator is empowered to enforce
+      the correct processing of transactions, maintaining the chain's
+      trustlessness and security.
+
+
       ### Staking
 
+      Staking in the Arbitrum protocol involves validators depositing ETH as
+      collateral with the Layer 1 contracts, which serves as a financial
+      guarantee of their honest participation. Validators who stake become
+      responsible for a chain of RBlocks—their stake commits them to a specific
+      sequence that represents their version of the chain's correct history. To
+      propose a new RBlock, a validator must be staked on its predecessor,
+      ensuring they have a vested interest in the RBlock's acceptance since they
+      stand to lose their stake if it's rejected. The required stake amount is
+      usually set by the base stake parameter, but it can increase if the
+      chain's progress is sluggish, to discourage staking on incorrect RBlocks
+      and prevent stalling tactics. Validators can only unstake when all RBlocks
+      they are staked on are confirmed; otherwise, they risk losing their stake
+      if they fail a challenge. This staking mechanism is designed to secure the
+      network by aligning validators' financial incentives with the chain's
+      integrity.
+
+
+      ## Dispute Resolution
+
+
       ### Rules to confirm or reject
+
+      The first unresolved RBlock can be confirmed if:
+
+
+      - the RBlock's predecessor is the latest confirmed RBlock, and
+
+
+      - the RBlock's deadline has passed, and
+
+
+      - there is at least one staker, and
+
+
+      - all stakers are staked on the RBlock.
+
+
+      The first unresolved RBlock can be rejected if:
+
+
+      - the RBlock's predecessor has been rejected, or
+
+
+      - all of the following are true:
+
+
+      - the RBlock's deadline has passed, and
+
+
+      - there is at least one staker, and
+
+
+      - no staker is staked on the RBlock.
     name: Fraud Proving
     stepItems: []
     uuid: 41ee7801-5700-4906-bb10-4d8d7e87e9bb
