update guide Arbitrum Nova

--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,12 +1,52 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-09T14:06:00.955Z'
+created: '2023-11-09T14:17:07.608Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
 publishStatus: Live
 steps:
   - content: >-
+      ## Introdcution to Arbitrum Nova
+
+      ### What is Arbitrum Nova 
+
+      ### What is Anytrust Protocol 
+
+
+      ## Any trust Security
+
+      ### Data Availibility Committee
+
+      ### Dta Availibility Certificates
+
+      ### Data Availibility Software
+
+
+      ## How it works 
+
+      ### Sequencer Committe Interaction
+
+      ### Create Diagram 
+
+
+      ## Difference between roll up and anytrust
+
+      ### Create table 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       ## Arbitrum Nova?
 
 
