--- a/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
+++ b/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum One: Unraveling the intricacies of Arbitrum Rollup'
-created: '2023-11-09T14:57:38.387Z'
+created: '2023-11-09T15:10:20.326Z'
 guideType: onboarding
 key: arbitrum-one-arbitrum-university-177
 name: Arbitrum One
@@ -173,7 +173,7 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 1aa5dfb6-6c34-43a5-b9ae-9f45f513b50e
-  - content: >-
+  - content: >
       ## The Roll up security
 
       Arbitrum Rollup's security model leverages the robustness of Ethereum's
@@ -199,24 +199,60 @@ steps:
       trustlessness and security.
 
 
-      ### Staking
+      ## Staking
 
-      Staking in the Arbitrum protocol involves validators depositing ETH as
-      collateral with the Layer 1 contracts, which serves as a financial
-      guarantee of their honest participation. Validators who stake become
-      responsible for a chain of RBlocks—their stake commits them to a specific
-      sequence that represents their version of the chain's correct history. To
-      propose a new RBlock, a validator must be staked on its predecessor,
-      ensuring they have a vested interest in the RBlock's acceptance since they
-      stand to lose their stake if it's rejected. The required stake amount is
-      usually set by the base stake parameter, but it can increase if the
-      chain's progress is sluggish, to discourage staking on incorrect RBlocks
-      and prevent stalling tactics. Validators can only unstake when all RBlocks
-      they are staked on are confirmed; otherwise, they risk losing their stake
-      if they fail a challenge. This staking mechanism is designed to secure the
-      network by aligning validators' financial incentives with the chain's
-      integrity.
-    name: Fraud Proving
+      Here's a step-by-step process of staking within the Arbitrum network:
+
+
+      ### Step 1: Stake Deposit
+
+      Validators who choose to become stakers deposit ETH into Arbitrum Layer 1
+      contracts. These deposits are held as collateral and are at risk if the
+      staker is involved in a losing challenge. A single stake can cover a chain
+      of RBlocks. Stakers are automatically staked on the latest confirmed
+      RBlock and may also opt to stake on a successor to that RBlock, committing
+      to a sequence that represents a single, coherent claim about the chain's
+      history. 
+
+
+      ### Step 2: Staking Conditions
+
+      Validators not currently staked can place a stake on the latest confirmed
+      RBlock by depositing the minimum stake amount. Validators already staked
+      on an RBlock can extend their stake to one successor of that RBlock
+      without additional deposits. Creating a new RBlock as a successor to an
+      RBlock you're staked on is considered an extension of your stake.  If a
+      validator is staked only on the latest confirmed RBlock, they (or anyone
+      else) can request a refund of their stake.
+
+
+      ### Step 3: Creating New RBlocks
+
+      To propose a new RBlock, a validator must be a staker and have an active
+      stake on the RBlock's predecessor. This requirement ensures validators
+      have a vested interest in the accuracy of their proposed RBlocks. The
+      protocol tracks the required stake amount, which typically matches the
+      base stake amount set by the Nitro chain. If the chain is progressing
+      slowly in confirming RBlocks, the required stake amount may temporarily
+      increase.
+
+
+      ### Step 4: Commitment and Resolution
+
+      Once staked on an RBlock, a validator cannot unstake. The stake is either
+      returned following the confirmation of all RBlocks they're staked on, or
+      lost if the staked RBlock is rejected. Losing a challenge results in the
+      removal of the stake from all RBlocks and forfeiture of the staked funds.
+      The minimum stake amount can increase exponentially based on the time
+      elapsed since the deadline of the first unresolved RBlock, to discourage
+      stalling tactics. As the chain resumes normal progress, the stake
+      requirement decreases.
+
+
+      This staking mechanism is designed to align the validators' financial
+      incentives with the integrity and efficient progression of the Arbitrum
+      chain.
+    name: Security
     stepItems: []
     uuid: 41ee7801-5700-4906-bb10-4d8d7e87e9bb
   - content: ''
@@ -301,9 +337,13 @@ steps:
          There is at least one staker, and
 
          No staker is staked on the RBlock.
-    name: Step 7
+    name: Fraud Proving
     stepItems: []
     uuid: 4eea708f-4c60-45b1-8109-a2a64e003b41
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: 955c8d11-2337-4d99-8b73-c07e348d5167
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: arbitrum-one-arbitrum-university-177
