--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-09T14:17:07.608Z'
+created: '2023-11-09T15:37:45.742Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
@@ -87,7 +87,7 @@ steps:
       plan to implement further improvements to reduce transaction costs over
       time, ensuring that the chain remains efficient and cost-effective for
       developers.
-    name: What is Arbitrum Nova?
+    name: Introduction to Arbitrum Nova?
     stepItems: []
     uuid: da215e0f-48ba-4f01-b253-88e962c31866
   - content: ''
@@ -116,6 +116,17 @@ steps:
         explanation: Explanation of the question
     uuid: 33bf1c78-8529-42b0-8ff8-3c55952709c9
   - content: >+
+      ### Data Availibility Committee
+
+      ### Dta Availibility Certificates
+
+      ### Data Availibility Software
+
+
+
+
+
+
       ## What is AnyTrust?
 
 
@@ -159,7 +170,7 @@ steps:
       This is achieved by leveraging the trust assumption and relying on the
       Committee to store and provide data on demand.
 
-    name: AnyTrust Overview
+    name: AnyTrust Security
     stepItems: []
     uuid: 14b4f959-595a-479a-8123-0c31f19e26b7
   - content: ''
@@ -168,6 +179,14 @@ steps:
     uuid: 7f2b25cc-5ddc-4386-a8bf-82e8ee18f826
   - content: >+
       ## What is a Data Availability Certificate (DACerts)
+
+      ### Sequencer Committe Interaction
+
+      ### Create Diagram 
+
+
+
+
 
 
       Data Availability Certificates (DACerts) are an essential component of
@@ -208,7 +227,7 @@ steps:
       associated data block, which is guaranteed to be available due to the
       DACert's validity.
 
-    name: Data Availability Certificates
+    name: How does it Work?
     stepItems: []
     uuid: 23e855d8-e3ff-49e3-bef2-9961ebefa48e
   - content: ''
@@ -216,195 +235,39 @@ steps:
     stepItems: []
     uuid: c7e781c8-65cb-4190-bd76-26c6ef3756c1
   - content: >
-      ## Overview of Data Availability Servers (DAS)
-
-
-      Data Availability Servers (DAS) play a crucial role in ensuring the
-      availability and accessibility of data blocks. DAS software empowers
-      deployments to optimize data availability, durability, and performance
-      according to their specific needs.
-
-
-      #### Sequencer API: Submitting Data Blocks for Storage
-
-
-      The Sequencer API is a JSON-RPC interface specifically designed for the
-      Arbitrum chain's Sequencer. Its primary function is to allow the Sequencer
-      to submit data blocks to the Data Availability Servers (DAS) for storage.
-      This API is meant to be accessed exclusively by the Sequencer, and
-      deployments typically restrict access to other callers. By utilizing the
-      Sequencer API, the DAS ensures that only authorized entities can submit
-      data blocks for storage, enhancing security and data integrity.
-
-
-      #### REST API: Fetching Data Blocks by Hash
-
-
-      In contrast to the Sequencer API, the REST API is intended to be available
-      to the world. It is a RESTful HTTP(S) based protocol that enables users to
-      fetch data blocks by their respective hash values. This API is fully
-      cacheable, meaning that deployments can leverage caching proxies or
-      Content Delivery Networks (CDNs) to enhance scalability and protect
-      against Denial of Service (DoS) attacks. By making data blocks accessible
-      through the REST API, the DAS ensures that users can retrieve specific
-      data blocks efficiently and securely.
-
-
-      ## Features of DAS
-
-
-      #### Flexible Data Storage Options
-
-
-      The DAS software offers a range of configuration options for storing data.
-      Depending on the deployment's requirements, the software can store data in
-      local files, a Badger database, Amazon S3, or redundantly across multiple
-      backing stores. This flexibility allows deployments to choose the storage
-      solution that best suits their needs, whether it's leveraging existing
-      infrastructure or utilizing cloud-based storage services. By providing
-      multiple storage options, the DAS ensures that deployments can optimize
-      data availability and durability according to their specific requirements.
-
-
-      #### Optional Caching for Improved Performance
-
-
-      To further enhance performance, the DAS software supports optional caching
-      mechanisms. It can cache data in memory using Bigcache or in a Redis
-      instance. By caching data, the DAS minimizes the need for repeated data
-      retrieval, improving response times and overall system efficiency. This
-      optional caching feature is particularly beneficial for deployments that
-      require frequent access to specific data blocks, as it reduces the
-      reliance on disk-based storage and accelerates data retrieval.
-    name: 'Data Availability Servers '
-    stepItems: []
-    uuid: 6a3dea00-4a8f-43d6-9d9f-18a8476f1520
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: b614e0a9-e532-44c2-b943-6745b8f9d531
-  - content: >
-      ## Sequencer Committee Interaction
-
-
-      In the Arbitrum ecosystem, the Sequencer Committee plays a crucial role in
-      ensuring the smooth functioning of data posting. This interaction involves
-      the sequencer, committee members, and the L2 software. By following this
-      process, data batches are securely stored, signed, and made available for
-      further processing. In case of any issues, the fallback mechanism ensures
-      the continuity of data posting. This seamless interaction ensures the
-      efficient functioning of the Arbitrum ecosystem. Let's delve into the
-      process and understand how it works.
-
-
-      #### Data Batch Posting
-
-
-      When the Arbitrum sequencer wants to post a data batch using the
-      Committee, it sends the batch's data and an expiration time to all
-      Committee members simultaneously. This is done through a process called
-      Remote Procedure Call (RPC). The expiration time is typically set to three
-      weeks in the future.
-
-
-      #### Storage and Signing
-
-
-      Upon receiving the data, each Committee member stores it in its own
-      backing store, organizing it by the data's hash. Additionally, the member
-      signs the (hash, expiration time) pair using its BLS key. The signature,
-      along with a success indicator, is then sent back to the sequencer.
-
-
-      #### Signature Aggregation
-
-
-      Once the sequencer has collected enough signatures from the Committee
-      members, it can aggregate them to create a valid DACert (Data Availability
-      Certificate) for the (hash, expiration time) pair. This DACert is a
-      crucial component for data availability in the Arbitrum ecosystem.
-
-
-      ####  Posting to L1 Inbox Contract
-
-
-      The sequencer proceeds to post the DACert to the L1 inbox contract. By
-      doing so, the DACert becomes accessible to the AnyTrust chain software at
-      L2. This step ensures that the data is securely transferred and available
-      for further processing within the Arbitrum ecosystem.
-
-
-      #### Fallback to Rollup
-
-
-      In the event that the sequencer fails to collect enough signatures within
-      a few minutes, it will abandon the attempt to use the Committee. Instead,
-      it will "fall back to rollup" by directly posting the full data to the L1
-      chain. This fallback mechanism ensures that data is not lost and can still
-      be processed in a non-AnyTrust chain scenario.
-    name: Sequencer Committee Interaction
-    stepItems: []
-    uuid: c973399d-1fc0-474a-9519-bfabb9015922
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: 84d4d5a8-4702-4ba3-89e4-0fe218c8b0d3
-  - content: >-
       ## Differences between Arbitrum Nova (AnyTrust) and Arbitrum One (Rollup)
 
 
-      Arbitrum Nova and Arbitrum One are two different chains within the
-      Arbitrum ecosystem, each with its own unique features and characteristics.
-      These differences provide users with options based on their specific needs
-      and preferences within the Arbitrum ecosystem. Let's explore the
-      differences between them.
+      | Feature               | Arbitrum One
+      (Rollup)                                                        | Arbitrum
+      Nova (AnyTrust)                                               |
 
+      |-----------------------|------------------------------------------------------------------------------|------------------------------------------------------------------------|
 
-      #### Data Availability 
+      | **Data Authenticity** | Layer 2 transaction data is posted on the
+      Ethereum blockchain.               | Uses AnyTrust technology with a Data
+      Availability Committee (DAC).     |
 
+      | **Trust Assumption**  | Trustless and permissionless, open for anyone to
+      validate.                   | Relies on at least two honest DAC members to
+      operate securely.         |
 
-      In Arbitrum One, all Layer 2 transaction data is posted on the Ethereum
-      blockchain, allowing validators to verify the authenticity of
-      transactions. On the other hand, Arbitrum Nova uses a different technology
-      called AnyTrust, where a Data Availability Committee (DAC) stores
-      transaction data and provides it to validators through Data Availability
-      Certificates (DACerts). This means that only the certificates are posted
-      on Layer 1, rather than the full transaction data.
+      | **Gas Price**         | Minimum gas price is 0.1
+      gwei.                                               | Minimum gas price is
+      0.01 gwei, potentially 10x cheaper.               |
 
+      | **Scalability**       | Suitable for general use
+      cases.                                              | More scalable,
+      designed for high-load dApps like NFTs and social networks. |
 
-      #### Trust Assumption
+      | **DeFi Protocols**    | Higher TVL with major DeFi protocols like
+      Uniswap, Aave, and Curve.          | Lower TVL with a focus on gaming and
+      social, includes Sushi and others.   |
 
-
-      Arbitrum One is trustless and permissionless, meaning that anyone can
-      participate in validating the chain and ensuring its safety. However,
-      Arbitrum Nova introduces a trust assumption by relying on the honesty of
-      at least two members of the Data Availability Committee. If this
-      assumption is met, the system operates without posting the L2 chain's data
-      on L1, resulting in significantly lower fees for users.
-
-
-      #### Gas Price and Scalability
-
-
-      The minimum allowed gas price on Arbitrum Nova is 0.01 gwei, while on
-      Arbitrum One it is 0.1 gwei. This means that transactions on Arbitrum Nova
-      can cost 10 times less than on Arbitrum One, even if they require the same
-      amount of computation effort. Additionally, Nova is designed to be more
-      scalable, making it a suitable choice for high-load decentralized
-      applications (dApps) like NFT-based games and Web3 social networks.
-
-
-      #### DeFi Protocols
-
-
-      Both Arbitrum Nova and Arbitrum One support various decentralized finance
-      (DeFi) protocols. However, Arbitrum One currently has a higher Total Value
-      Locked (TVL) with $3.4 billion compared to Nova's less than $5 million.
-      Notable DeFi protocols on Arbitrum One include Uniswap, Balancer, Aave,
-      Sushi, and Curve. Nova, on the other hand, features Sushi and other
-      lesser-known dApps like Arbswap, RCPswap, Symbiosis Finance, and Archly
-      Finance.
-    name: Rollup vs Anytrust
+      | **Transaction Costs** | Relatively higher due to full data posting on
+      Ethereum.                      | Lower costs due to only posting
+      certificates on Layer 1.               |
+    name: Arbitrum One vs Arbitrum Nova
     stepItems: []
     uuid: 4e3de1c8-a81b-438d-a502-266879063830
   - content: ''
