--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,92 +1,65 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-09T15:37:45.742Z'
+created: '2023-11-09T15:59:13.083Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
 publishStatus: Live
 steps:
   - content: >-
-      ## Introdcution to Arbitrum Nova
+      ## What is Arbitrum Nova?
 
-      ### What is Arbitrum Nova 
-
-      ### What is Anytrust Protocol 
-
-
-      ## Any trust Security
-
-      ### Data Availibility Committee
-
-      ### Dta Availibility Certificates
-
-      ### Data Availibility Software
+      Arbitrum Nova is a variant within the Arbitrum ecosystem that provides a
+      high-performance blockchain solution. Arbitrum Nova operates on the
+      AnyTrust protocol, which is mostly trustless but introduces a new element
+      of trust. The core of this additional trust assumption is the Data
+      Availability Committee (DAC), which has the task of efficiently handling
+      Layer 2 transaction data—storing it, batching it, and then posting it to
+      Ethereum's Layer 1. The presence of the DAC in the AnyTrust protocol is
+      what allows Arbitrum Nova to offer enhanced performance and
+      cost-effectiveness, making it suitable for use cases where these
+      attributes are prioritized. 
 
 
-      ## How it works 
+      ## What is Anytrust Protocol 
 
-      ### Sequencer Committe Interaction
-
-      ### Create Diagram 
-
-
-      ## Difference between roll up and anytrust
-
-      ### Create table 
-
-
-
-
-
+      The AnyTrust protocol is a variation of the Arbitrum Nitro technology
+      designed to reduce costs by incorporating a slight trust assumption.
+      Instead of requiring every node within the Arbitrum network to have access
+      to all Layer 2 transaction data—typically ensured by posting this data on
+      Ethereum's Layer 1, AnyTrust delegates this responsibility to a Data
+      Availability Committee. This committee, comprising multiple members,
+      operates under the assumption that at least two members are honest.
+      Consequently, even if the majority collude, the integrity of data
+      availability is maintained, allowing the rollup protocol to function
+      correctly and reducing the reliance on Ethereum's more costly data posting
+      process.
 
 
+      ### Benefits of AnyTrust
+
+      The benefits of AnyTrust are extensive including:
 
 
+      #### Cost Reduction 
+
+      The protocol diminishes the burden on the Ethereum mainnet by limiting the
+      amount of data posted as calldata, which is the main cost driver in the
+      Arbitrum system. By relying on a Committee to store and furnish data as
+      needed, with protocols in place to manage membership and ensure data
+      integrity through a system of public keys and signature requirements
+      (Keysets), AnyTrust significantly reduces the gas costs associated with
+      data availability. 
 
 
+      #### Operational Efficiency 
 
-
-
-      ## Arbitrum Nova?
-
-
-      Arbitrum Nova is a high-performance alternative to Arbitrum One's chain.
-      While Arbitrum One focuses on pure trustlessness through the Rollup
-      protocol, Arbitrum Nova implements the AnyTrust protocol, which introduces
-      an additional trust assumption in the form of a Data Availability
-      Committee (DAC). This committee is responsible for storing, batching, and
-      posting L2 transaction data to Ethereum's L1, expediting the process and
-      improving performance and affordability. AnyTrust manages data off-chain,
-      relying on the committee members to provide the necessary data in case of
-      a challenge. This off-chain approach allows AnyTrust to offer lower fees,
-      making it a sensible tradeoff for applications that require high
-      transaction throughput but don't need the full decentralization provided
-      by rollups.
-
-
-      #### Use Cases and Focus
-
-
-      Arbitrum Nova is tailored for building social applications and gaming. The
-      new chain aims to help creators tackle scalability, privacy, and
-      speed-related issues. By implementing optimistic rollup technology,
-      Arbitrum Nova offers faster transactions, lower fees, and robust
-      Ethereum-based security benefits for Web3 developers. It provides full
-      access to the EVM environment, allowing developers to test out the new
-      technology and explore a broader range of use cases.
-
-
-      #### Transaction Data Handling
-
-
-      Arbitrum Nova utilizes the AnyTrust technology introduced in early 2022,
-      which significantly reduces transaction costs by only putting data
-      on-chain if the committee fails to perform its function. This approach
-      makes it ideal for projects with high transaction volume expectations,
-      such as gaming and social platforms. The creators of Arbitrum Nova also
-      plan to implement further improvements to reduce transaction costs over
-      time, ensuring that the chain remains efficient and cost-effective for
-      developers.
+      The structured management of Keysets, overseen by the L1 KeysetManager
+      contract, adds flexibility and security to the Committee's operation,
+      allowing for smooth membership changes and key updates while ensuring that
+      the data is accessible to anyone with the Keyset hash. This setup fosters
+      a trust-minimized environment that balances efficiency with the
+      decentralized ethos of blockchain systems.
     name: Introduction to Arbitrum Nova?
     stepItems: []
     uuid: da215e0f-48ba-4f01-b253-88e962c31866
